# MarkDownAutoTitle

./: Cargo.toml  README.md  TODO.md  notes.md
src/: generator.rs  main.rs
test_files/: test-0_simple (result).md  test-0_simple (target).md  test-2_with_title (expected).md  test-2_with_title (target).md
test_files/simple/: expected.md  target.md
